--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -8,3 +8,13 @@
     width: 50%;
     padding: 10px;
 }
+
+.navbar{
+    overflow: hidden;
+    position: fixed;
+    top: 0;
+}
+
+#AboutMe{
+    padding: 0;
+}
