--- a/style.css
+++ b/style.css
@@ -19,6 +19,16 @@
     padding: 0;
 }
 
+.card img{
+    position: relative;
+    float: left;
+    width:  100px;
+    height: 100px;
+    background-position: 50% 50%;
+    background-repeat:   no-repeat;
+    background-size:     cover;
+}
+
 .parallax {
     /* The image used */
     background-image: url('ScenicBay.png');
