--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
     padding: 10px;
 }
 
-.navbar{
+.navbar {
     overflow: hidden;
     position: fixed;
     top: 0;
@@ -18,12 +18,14 @@
 #AboutMe{
     padding: 0;
 }
-
+.card {
+    position: fixed;
+}
 .card img{
     position: relative;
     float: left;
-    width:  100px;
-    height: 100px;
+    width:  100%;
+    height: 100%;
     background-position: 50% 50%;
     background-repeat:   no-repeat;
     background-size:     cover;
