--- a/style.css
+++ b/style.css
@@ -20,6 +20,10 @@
     padding: 0;
 }
 
+.skills {
+    overflow: hidden;
+}
+
 .card img{
     position: relative;
     float: left;
@@ -30,18 +34,37 @@
     background-size:     cover;
 }
 
-.parallax {
-    /* The image used */
-    background-image: url('ScenicBay.png');
-
-    /* Full height */
-    height: 100%; 
-
-    /* Create the parallax scrolling effect */
+.home, .bgimg-2, .bgimg-3 {
+    position: relative;
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+  
+  }
+  .home {
+    background-image: url("ScenicBay.png");
+    min-height: 100%;
+    margin-top: 4.5%;
+  }
+  
+  .bgimg-2 {
+    background-image: url("ScenicBay.png");
+    min-height: 400px;
+    opacity: 0.65;
+  }
+  
+  .bgimg-3 {
+    background-image: url("ScenicBay.png");
+    min-height: 400px;
+    opacity: 0.65;
+  }
+  
+  /* Turn off parallax scrolling for tablets and phones. Increase/decrease the pixels if needed */
+@media only screen and (max-device-width: 1024px) {
+    .parallax {
+        background-attachment: scroll;
+    }
 }
 
 
