--- a/style.css
+++ b/style.css
@@ -2,9 +2,12 @@ body {
     padding-top: 60px;
   }
 
+
 .headShot{
     border-radius: 50%;
     width: 100%;
+    margin: auto;
+    padding: 10%;
 }
 
 .center {
@@ -21,6 +24,8 @@ body {
 }
 .jumbotron-fluid{
     margin-top: -0.17% !important;
+    padding-top: 0em !important;
+    padding-bottom: 8em !important;
 }
 .display-3{
     margin-left: 5%;
@@ -33,8 +38,8 @@ body {
     float: left;
 }
 
-#aboutMe:target{
-    padding-top: 65px;
+#aboutMe:focus{
+    padding-top: 85pxt;
 }
 
 #grades:target{
@@ -68,6 +73,7 @@ body {
     background-image: url("ScenicBay.png");
     min-height: 100%;
     margin-top: 0;
+
   }
   
   .bgimg-2 {
@@ -96,3 +102,25 @@ body {
 .morelink {
     display: block;
 }
+
+.fa:hover {
+    opacity: 0.7;
+}
+
+
+.fa {
+    padding: 20px;
+    font-size: 4em;
+    width:2em;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 50%;
+    background: #007bb5;
+    color: white;
+  }
+ .fa-linkedin{
+     float: left;
+ }
+ .fa-github{
+     float: right;
+ }
