added tracker for bens comments

--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ div{
   }
   
   .bgimg-3 {
-    background-image: url("ScenicBay.png");
+    background-image: url("paralax2.png");
     min-height: 400px;
     opacity: 0.65;
   }
