--- a/style.css
+++ b/style.css
@@ -25,6 +25,9 @@ div{
     top: 0;
     z-index: 1;
 }
+#search{
+    float: right;
+}
 .jumbotron-fluid{
     margin-top: -0.17% !important;
     padding-top: 0em !important;
@@ -33,7 +36,6 @@ div{
 .name{
     margin-left: 5%;
     white-space: nowrap;
-    overflow: hidden;
 }
 
 .contact{
@@ -99,6 +101,9 @@ div{
 @media only screen and (max-device-width: 1024px) {
     .parallax {
         background-attachment: scroll;
+    }
+    #search{
+        visibility: hidden;
     }
 }
 
