--- a/style.css
+++ b/style.css
@@ -33,9 +33,12 @@ div{
     position: fixed !important;
     top: 0;
     z-index: 1;
+    white-space: nowrap;
 }
-#search{
-    float: right;
+@media (max-width: 990px) {
+    #search{
+        display: none;
+    }
 }
 .jumbotron-fluid{
     margin-top: -0.17% !important;
@@ -43,6 +46,7 @@ div{
     padding-bottom: 8em !important;
 }
 .name{
+    color: white;
     margin-left: 5%;
     white-space: nowrap;
 }
@@ -69,6 +73,9 @@ div{
     height : 485px;
     overflow: hidden;
 }
+ h5 {
+    display: inline;
+}
 
 .card img{
     position: relative;
@@ -80,7 +87,7 @@ div{
     background-size:     cover;
 }
 
-.home, .bgimg-2, .bgimg-3 {
+.home, .paralax-1, .paralax-2, .paralax-3, .paralax-4 {
     position: relative;
     background-attachment: fixed;
     background-position: center;
@@ -94,25 +101,34 @@ div{
 
   }
   
-  .bgimg-2 {
+  .paralax-1 {
     background-image: url("paralax1.png");
-    min-height: 400px;
+    min-height: 450px;
     opacity: 0.65;
   }
   
-  .bgimg-3 {
+  .paralax-2 {
     background-image: url("paralax2.png");
-    min-height: 400px;
+    min-height: 450px;
     opacity: 0.65;
   }
+  .paralax-3 {
+    background-image: url("paralax3.jpg");
+    min-height: 450px;
+    opacity: 0.65;
+  }
+  
+  .paralax-4 {
+    background-image: url("paralax4.png");
+    min-height: 450px;
+    opacity: 0.65;
+  }
+  
   
   /* Turn off parallax scrolling for tablets and phones. Increase/decrease the pixels if needed */
 @media only screen and (max-device-width: 1024px) {
     .parallax {
         background-attachment: scroll;
-    }
-    #search{
-        visibility: hidden;
     }
 }
 
@@ -123,11 +139,10 @@ div{
 .morelink {
     display: block;
 }
-
-.fa:hover {
+#otherPages .fa:hover {
     opacity: 0.7;
+    text-decoration: none !important;
 }
-
 
 .fa {
     padding: 20px;
@@ -139,9 +154,29 @@ div{
     background: #007bb5;
     color: white;
   }
- .fa-linkedin{
-     float: left;
- }
  .fa-github{
      float: right;
  }
+
+ .black_overlay {
+    display: none;
+    position: absolute;
+    top: 0%;
+    left: 0%;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    z-index: 1001;
+    -moz-opacity: 0.8;
+    opacity: .80;
+    filter: alpha(opacity=80);
+  }
+  .white_content {
+    display: none;
+    position: absolute;
+    top: 25%;
+    left: 25%;
+    width: 50%;
+    z-index: 1002;
+    overflow: auto;
+  }
