--- a/style.css
+++ b/style.css
@@ -39,6 +39,13 @@ div{
     #search{
         display: none;
     }
+    .skills {
+        height : 1100px;
+        overflow: hidden;
+    }
+    .showMore{
+        display: none;
+    }
 }
 .jumbotron-fluid{
     margin-top: -0.17% !important;
@@ -68,10 +75,16 @@ div{
 #skills:target{
     padding-top: 65px;
 }
-
+.projects:target{
+    padding-top: 65px;
+}
 .skills {
-    height : 485px;
+    height : 380px;
     overflow: hidden;
+}
+.card-deck{
+    margin-left: 3% !important;
+    margin-right: 3% !important;
 }
  h5 {
     display: inline;
@@ -81,7 +94,7 @@ div{
     position: relative;
     float: left;
     width:  100%;
-    height: 250px;
+    height: 130px;
     background-position: 50% 50%;
     background-repeat:   no-repeat;
     background-size:     cover;
