--- a/style.css
+++ b/style.css
@@ -11,7 +11,10 @@ body {
         padding: none;
     }
   }
-
+.paddingDiv{
+    padding-left: 1%;
+    padding-right: 1%;
+}
 .headShot{
     border-radius: 50%;
     width: 100%;
